Fix iOS caret width. Improve padding on mobile.

--- a/src/sass/_vars.sass
+++ b/src/sass/_vars.sass
@@ -36,3 +36,4 @@ $info-control-height: 24px;
 $info-control-width: 36px;
 
 $gutter: 32px;
+$gutter-mobile: 16px;
